targeting-service/ingress-targeting-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: targeting-service-ing
  namespace: targeting-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /targeting(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: targeting-service-svc
              port:
                number: 8003
